# zimt

./: LICENSE  README.md  array.h  bill.h  cherrypicking.cc  common.h  example.cc  examples.sh  hwy_atan2.h  hwy_simd_type.h  interleave.h  multithread.h  simd_type.h  std_simd_type.h  thread_pool.h  transform.h  uf_example.cc  unary_functor.h  vc_simd_type.h  vector.h  wielding.h  xel.h  xel_def.h  xel_inner.h  xel_mask.h  zimt.h
examples/: CMakeLists.txt  adapt_vspline.cc  adapt_vspline.cpp  benchmark.sh  bsp_eval.cc  cherrypicking.cpp  convolve.cc  cropped.cc  cubemap.cc  debian.sh  driver.cc  drv_convolve.cc  envutil.cc  example.cc  examples.sh  examples_oiio.sh  extern_get_t.cpp  fetches_get_t.cpp  fir.cc  granulate.cc  iir.cc  image_lines.cc  image_tiles.cc  join.cc  latlon.cc  linspace.cc  metrics.h  patches.cc  permute.cc  pixi.toml  prefilter.cc  rectilinear.cc  scanlines.cc  skin.cc  skybox.cc  tiles.cc  tiles2.cc  tiles3.cc  tiles_3d.cc  uf_example.cc  (+4 more)
examples/multi_isa/: compile.sh  foo_avx2.cc  foo_sse.cc  isa_specific.cc  main.cc
examples/multi_isa_example/: driver.cc  interface.h  multi_simd_isa.md  payload.cc  project.h
examples/multi_tu_example/: CMakeLists.txt  dispatch.cc  dispatch.h  driver.cc  e_payload.cc  l_payload.cc  multi_tu.md  p_payload.cc  payload.cc
include/: array.h  bill.h  common.h  get_t.h  hwy_simd_type.h  put_t.h  simd_type.h  std_simd_type.h  transform.h  unary_functor.h  vc_simd_type.h  vector.h  wielding.h  xel.h  xel_inner.h
include/simd/: gen_simd_type.h  hwy_simd_type.h  simd_type.h  std_simd_type.h  vc_interleave.h  vc_simd_type.h  vector_common.h
zimt/: array.h  basis.h  bill.h  block.h  brace.h  bspline.h  common.h  convolve.h  eval.h  extrapolate.h  filter.h  get.h  interface.h  map.h  multithread.h  poles.h  prefilter.h  put.h  recursive.h  scanlines.h  simd.h  thread_pool.h  tiles.h  transform.h  unary_functor.h  vector.h  wielding.h  xel.h  zimt.h  zimt_vigra.h
zimt/simd/: gen_simd_type.h  hwy_atan2.h  hwy_interleave.h  hwy_simd_type.h  simd_tag.h  std_simd_type.h  vc_interleave.h  vc_simd_type.h  vector_common.h  vector_mask.h
